cmake_minimum_required(VERSION 3.29)
project(Cpp)

set(CMAKE_CXX_STANDARD 20)

#add_executable(Cpp Project_One.cpp)
#add_executable(Cpp Project_Two.cpp)
#add_executable(Cpp Project_Three.cpp)
#add_executable(Cpp Project_Four.cpp)
#add_executable(Cpp Project_Five.cpp)
#add_executable(Cpp Project_Six.cpp)
#add_executable(Cpp Project_Seven.cpp)
#add_executable(Cpp Project_Eight.cpp)
#add_executable(Cpp Project_Nine.cpp)
#add_executable(Cpp Project_Ten.cpp)
#add_executable(Cpp Project_Eleven.cpp)
#add_executable(Cpp Project_Twoelve.cpp)
#add_executable(Cpp Project_Thirteen.cpp)
add_executable(Cpp Project_University.cpp)


# Project_One.cpp
# Project_Two.cpp
# Project_Three.cpp
# Project_Four.cpp
# Project_Five.cpp
# Project_Six.cpp
# Project_Seven.cpp
# Project_Eight.cpp
# Project_Nine.cpp
# Project_Ten.cpp
# Project_Eleven.cpp
# Project_Twoelve.cpp
# Project_Thirteen.cpp